--- a/TODO
+++ b/TODO
@@ -1,1 +1,3 @@
 - Use archlinux bootstrap tgz as base layer (BTRFS?) for other images?
+- Update home-gallery script (not rebuild container)
+- Make home-gallery follow symlinks (open issue)
